menu-web-update

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
                 >
                 <div>
-                    <p class="font-bold">Hambuguer Smash</p>
+                    <p class="font-bold">Hambúrguer Smash</p>
                     <p class="text-sm">Pão levinho de fermentação natural da trigou, burguer 160g, queijo prato e maionese de casa.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 18.90</p>
                         <button 
                             class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                            data-name="Hambuguer Smash"
+                            data-name="Hambúrguer Smash"
                             data-price="18.90">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
@@ -68,14 +68,14 @@
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
                 >
                 <div>
-                    <p class="font-bold">Hambuguer Duplo</p>
+                    <p class="font-bold">Hambúrguer Duplo</p>
                     <p class="text-sm">Pão levinho de fermentação natural da trigou, 2 burguer 160g, bacon, cheddar e maionese de casa.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 32.90</p>
                         <button 
                             class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                            data-name="Hambuguer Duplo"
+                            data-name="Hambúrguer Duplo"
                             data-price="32.90">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
@@ -90,14 +90,14 @@
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
                 >
                 <div>
-                    <p class="font-bold">Hambuguer Caseiro</p>
+                    <p class="font-bold">Hambúrguer Caseiro</p>
                     <p class="text-sm">Pão levinho de fermentação natural da trigou, 2 burguer 160g, bacon, dose dupla de cheddar e dose extra de maionese de casa.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 35.90</p>
                         <button 
                             class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                            data-name="Hambuguer caseiro"
+                            data-name="Hambúrguer caseiro"
                             data-price="35.90">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
@@ -112,14 +112,14 @@
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
                 >
                 <div>
-                    <p class="font-bold">Hambuguer Steack</p>
+                    <p class="font-bold">Hambúrguer Steack</p>
                     <p class="text-sm">Pão  brioche, 1 frango empanado 160g, salada, cebola caramelizada, cheddar e dose extra de maionese de casa.</p>
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 12.90</p>
                         <button 
                             class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                            data-name="Hambuguer steack"
+                            data-name="Hambúrguer steack"
                             data-price="12.90">
                             <i class="fa fa-cart-plus text-lg text-white"></i>
                         </button>
